feat(Repository): 레포지토리 종류에 따른 PR 분류로 변경
List<PullRequest> -> Map<String, List<PullRequest>>